Revision history for SPVM

0.9114  2021-01-10
        [BUGS]
        * new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config pass
          arguments to new of SPVM::Builder::Config.

0.9113  2021-01-09
        [CHANGES]
        * Add "use" method to SPVM::Builder::Config. This method is the alias for "add_resources".
        * Remove "ext" field of SPVM::Builder::Config because source files was needed to be specifed.
        * Need Test::More 0.92+ to do tests.
        * Rename sources field of SPVM::Builder::Config to source_files.
        * Rename add_sources method of SPVM::Builder::Config to add_source_files.
        
0.9112  2021-01-07
        [BUGS]
        * Fix a unweaken memory leak bug.
        
0.9111  2021-01-07
        [CHANGES]
        * Improve compile error message "Can't locate ...". 
          [Before]
          Can't locate Foo/Bar.spvm in @INC ...
          
          [After]
          Can't locate Foo/Bar.spvm to load Foo::Bar class in @INC ...
        * Improve compile error message "... is different from". And this message is output only once.
          [Before]
          Class name "ClassNameDifferntFromModuleNameXXXXXXX" is different from
          the class name corresponding to the module file "TestCase::CompileError::Class::ClassNameDifferntFromModuleName"
          [After]
          Wrong class name "ClassNameDifferntFromModuleNameXXXXXXX".
          The class name must be "TestCase::CompileError::Class::ClassNameDifferntFromModuleName"

        [BUGS]
        * Fix the bugs that variable names can contain ":::".
        * Fix the bugs that the type conversion from multi numrci type to object type is allowed.
        * Fix the bugs that when class is not found in static method call, a segmentation fault occurs.

0.9110  2021-01-07
        [CHANGES]
        * Current class "cur->" is changed to "&"
          [Before]
          cur->sum(1, 2)
          
          [After]
          &sum(1, 2)

0.9109  2021-01-06
        [CHANGES]