@@ -4,6 +4,7 @@ Revision history for SPVM
         [BUGS]
         * new_c, new_c99, new_cpp, new_cpp11 of SPVM::Builder::Config pass
           arguments to new of SPVM::Builder::Config.
+        * Add file, file_optional, native_include_dir, native_src_dir fields to SPVM::Builder::Config.
 
 0.9113  2021-01-09
         [CHANGES]
